examples/negative/doc/dup_item_doc.kai
# Negative fixture (#681): two `#[doc(...)]` attributes stacked on the
# same declaration. The parser must reject with a typed error pointing
# at the SECOND occurrence (line 7).

#[doc("first doc")]
#[doc("second doc")]
pub fn f() : Int = 1

fn main() : Int = f()
